feat: analytics query in progress
